# jieba.js

./: .gitattributes  .gitignore  .gitmodules  .npmignore  .prettierrc  CHANGELOG.md  CMakeLists.txt  README.md  development.md  index.d.ts  index.ts  jieba.d.ts  jieba.js  package.json  tsconfig.json  webpack.config.js
examples/: index.html  index.js
scripts/: buildcpp.js
src/: CMakeLists.txt  jieba-c.cpp  jieba-c.h  js-extern-post.js  js-extern-pre.js
tests/: index.js
